log
Thu 20 Apr 2023 12:19:26 AM UTC: 
 tests:  1|8
total_score: 0/70
dd6429f
Thu 20 Apr 2023 12:25:44 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
6da245d
Thu 20 Apr 2023 12:25:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
b8b9de9
Thu 20 Apr 2023 12:26:09 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a1e7743
Thu 20 Apr 2023 12:40:56 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
84adecf
Thu 20 Apr 2023 12:54:04 AM UTC: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++----
 1 file changed, 37 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:80:3: error: expected expression before ‘}’ token
   80 |   }
      |   ^
Compilation failed
f7893de
